# rush

./: Cargo.toml  LICENSE  README.md  test.sh
src/: builtins.rs  debug.rs  helpers.rs  lexer.rs  lib.rs  main.rs  parser.rs  runner.rs  tokenizer.rs
tests/: cli.rs
