[package]
name = "rush"
version = "0.1.0"
authors = ["ashpil <ashpil@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_pipe = "0.9.2"
nix = "0.18.0"

[dev-dependencies]
assert_cmd = "1.0.1"
escargot = "0.5.0"
predicates-core = "1.0.0"
